add onclick listener to some buttons

--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 				<div class="sometext">password</div>
 				<input type="password" class="sometextbox" />
 				<div><input type="submit" value="login" class="somebutton" /></div>
-				<div><input type="button" value="register" class="somebutton" /></div>
+				<div><input type="button" value="register" class="somebutton" onclick="window.location='register.html'" /></div>
 			</form>
 		</div>
 		</div>
