--- a/register.html
+++ b/register.html
@@ -33,7 +33,7 @@
 				</table>
 				
 				<div><input type="submit" value="register" class="somebutton" /></div>
-				<div><input type="button" value="cancel" class="somebutton" /></div>
+				<div><input type="button" value="cancel" class="somebutton" onclick="window.location='login.html'" /></div>
 			</form>
 		</div>
 		</div>
