--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<header>
-			<button>LOGOUT</button>
+			<button onclick="window.location='login.html'" >LOGOUT</button>
 		</header>
 
 		<div id="roomlist">
