added add friend button and login info

--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<header>
+			<span>Logged in as developer</span>
 			<button onclick="window.location='login.html'" >LOGOUT</button>
 		</header>
 
@@ -35,6 +36,7 @@
 				<li>Joshua Poyatos</li>
 				<li>Marvin Baky</li>
 			</ul>
+			<input type="button" value="Add friend" />
 		</div>
 	</body>
 </html>
